# ick

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: build.yml
demo/: ick.toml
docs/: cog_helpers.py  conf.py  contributing.md  index.rst  tutorial.md  whole-tutorial.md
docs/concepts/: collections.md  guiding_principles.md  hooks.md  index.rst  norms.md  projects.md  rules.md  scope.md  what_came_before.md
ick/: _env_check.py  _regex_translate.py  add_rule.py  base_language.py  base_rule.py  click_better.py  clone_aside.py  cmdline.py  commit.py  compare.py  device_tmpdir.py  git.py  git_diff.py  main.py  project_finder.py  runner.py  server.py  sh.py  types_project.py  util.py  venv.py
ick_protocol/: __init__.py  ick_protocol.py
meta/: ick.toml
tests/: conftest.py  helpers.py  test_click_better.py  test_clone_aside.py  test_cmdline.py  test_compare.py  test_config.py  test_config_hook_repo.py  test_config_main.py  test_device_tmpdir.py  test_git.py  test_git_diff.py  test_languages_ast_grep.py  test_languages_exec.py  test_languages_merge_toml.py  test_languages_pygrep.py  test_languages_python.py  test_languages_shell.py  test_merge_dicts.py  test_project_config.py  test_project_finder.py  test_python_relative_imports.py  test_regex_translate.py  test_rules_ast_grep.py  test_rules_docker.py  test_rules_docker_image.py  test_rules_merge_toml.py  test_rules_pygrep.py  test_rules_python.py  test_rules_shell.py  test_runner.py  test_runner_env_vars.py  test_scenarios.py  test_util.py  test_venv.py
(+124 files in other folders)
