[metadata]
name = ick
description = Applier of fine source code fixes since 2025
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/advice-animal/ick/
author = Tim Hatch
author_email = tim@timhatch.com

[options]
packages = find:
# To make it work on 3.10 we'd need tomli and the typing hassle that comes with
# that; supporting 3 major python versions at this point seems like enough.
python_requires = >=3.11
setup_requires =
	setuptools-scm >= 8
	setuptools >= 65
include_package_data = true
install_requires =
    appdirs
    click
    filelock
    keke
    msgspec == 0.19.0
	rich == 13.*
	uv == 0.6.*
    vmodule
    tomlkit

[options.extras_require]
dev =
    ruff == 0.9.6
    mypy
    checkdeps
docs =
	sphinx == 8.1.3
	sphinx-mdinclude == 0.6.2
	sphinx-inline-tabs
	furo

test =
    pytest-cov
    pytest-mock
    pytest == 8.*

[options.entry_points]
console_scripts =
    ick=ick.main:main

[coverage:report]
fail_under = 65
precision = 1
show_missing = True
skip_covered = True

